Jobs and Get Document API (#1089)
* add update endpoint

* add testworld case

* fix testworld

* migrate jobs to rest

* migrate jobs to rest

* fix unit tests

* add get and get version

* update swagger

* update testworld tests
