# httpapi/coreapi/documents_api.go
@@ -6,10 +6,21 @@ import (
 	"net/http"
 
 	"github.com/centrifuge/go-centrifuge/documents"
+	"github.com/centrifuge/go-centrifuge/errors"
+	"github.com/centrifuge/go-centrifuge/jobs"
 	"github.com/centrifuge/go-centrifuge/utils/httputils"
+	"github.com/ethereum/go-ethereum/common/hexutil"
 	"github.com/go-chi/chi"
 	"github.com/go-chi/render"
 	logging "github.com/ipfs/go-log"
+)
+
+const (
+	// ErrInvalidDocumentID is a sentinel error for invalid document identifiers.
+	ErrInvalidDocumentID = errors.Error("invalid document identifier")
+
+	// ErrDocumentNotFound is a sentinel error for missing documents.
+	ErrDocumentNotFound = errors.Error("document not found")
 )
 
 var log = logging.Logger("core_api")
@@ -139,9 +150,99 @@ func (h handler) UpdateDocument(w http.ResponseWriter, r *http.Request) {
 	render.JSON(w, r, resp)
 }
 
-// Register registers the core apis to the router.
-func Register(r *chi.Mux, registry documents.TokenRegistry, docSrv documents.Service) {
-	h := handler{srv: Service{docService: docSrv}, tokenRegistry: registry}
-	r.Post("/documents", h.CreateDocument)
-	r.Put("/documents", h.UpdateDocument)
+// GetDocument returns the latest version of the document.
+// @summary Returns the latest version of the document.
+// @description Returns the latest version of the document.
+// @id get_document
+// @tags Documents
+// @param authorization header string true "centrifuge identity"
+// @param document_id path string true "Document Identifier"
+// @produce json
+// @Failure 400 {object} httputils.HTTPError
+// @Failure 404 {object} httputils.HTTPError
+// @Failure 500 {object} httputils.HTTPError
+// @success 200 {object} coreapi.DocumentResponse
+// @router /documents/{document_id} [get]
+func (h handler) GetDocument(w http.ResponseWriter, r *http.Request) {
+	var err error
+	var code int
+	defer httputils.RespondIfError(&code, &err, w, r)
+
+	docID, err := hexutil.Decode(chi.URLParam(r, "document_id"))
+	if err != nil {
+		code = http.StatusBadRequest
+		log.Error(err)
+		err = ErrInvalidDocumentID
+		return
+	}
+
+	model, err := h.srv.GetDocument(r.Context(), docID)
+	if err != nil {
+		code = http.StatusNotFound
+		log.Error(err)
+		err = ErrDocumentNotFound
+		return
+	}
+
+	resp, err := getDocumentResponse(model, h.tokenRegistry, jobs.NilJobID())
+	if err != nil {
+		code = http.StatusInternalServerError
+		log.Error(err)
+		return
+	}
+
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, resp)
+}
+
+// GetDocumentVersion returns the specific version of the document.
+// @summary Returns the specific version of the document.
+// @description Returns the specific version of the document.
+// @id get_document_version
+// @tags Documents
+// @param authorization header string true "centrifuge identity"
+// @param document_id path string true "Document Identifier"
+// @param version_id path string true "Document Version Identifier"
+// @produce json
+// @Failure 400 {object} httputils.HTTPError
+// @Failure 404 {object} httputils.HTTPError
+// @Failure 500 {object} httputils.HTTPError
+// @success 200 {object} coreapi.DocumentResponse
+// @router /documents/{document_id}/versions/{version_id} [get]
+func (h handler) GetDocumentVersion(w http.ResponseWriter, r *http.Request) {
+	var err error
+	var code int
+	defer httputils.RespondIfError(&code, &err, w, r)
+
+	ids := make([][]byte, 2, 2)
+	for i, idStr := range []string{chi.URLParam(r, "document_id"), chi.URLParam(r, "version_id")} {
+		var id []byte
+		id, err = hexutil.Decode(idStr)
+		if err != nil {
+			code = http.StatusBadRequest
+			log.Error(err)
+			err = ErrInvalidDocumentID
+			return
+		}
+
+		ids[i] = id
+	}
+
+	model, err := h.srv.GetDocumentVersion(r.Context(), ids[0], ids[1])
+	if err != nil {
+		code = http.StatusNotFound
+		log.Error(err)
+		err = ErrDocumentNotFound
+		return
+	}
+
+	resp, err := getDocumentResponse(model, h.tokenRegistry, jobs.NilJobID())
+	if err != nil {
+		code = http.StatusInternalServerError
+		log.Error(err)
+		return
+	}
+
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, resp)
 }
